completed CRUD operations with UI

--- a/week04/individual/public/css/style.css
+++ b/week04/individual/public/css/style.css
@@ -7,3 +7,16 @@
 p{
     margin: 10px 0 !important;
 }
+
+.btn-float{
+    float: left;
+    margin-right: 10px;
+}
+
+.flex{
+    display: flex;
+}
+
+.img-small{
+    width: 120px;
+}
