--- a/week04/individual/views/comments/edit.hbs
+++ b/week04/individual/views/comments/edit.hbs
@@ -1,6 +1,6 @@
 <h3>Edit Comment</h3>
 <div class="row">
-    <form action="/" method="POST" class="col s12">
+    <form action="/comments/{{comment._id}}" method="POST" class="col s12">
 
     <input type="hidden" name="_method" value="PUT">
     <div class="row">
@@ -26,7 +26,7 @@
     </div>
 
     <div class="row">
-        <input type="submit" value="Save" class="btn">
+        <input type="submit" value="Update" class="btn">
         <a href="/dashboard" class="btn orange">Cancel</a>
     </div>
     </form>
