--- a/week04/individual/views/comments/index.hbs
+++ b/week04/individual/views/comments/index.hbs
@@ -12,11 +12,11 @@
                     <br>
                     <div class="chip">
                         <img src="{{user.image}}" alt="">
-                        <a href="/comments/user/{{user._id}}">{{user.displayName}}</a>
+                        <a href="/dashboard">{{user.displayName}}</a>
                     </div>
                 </div>
                 <div class="card-action center-align">
-                    <a href="/stories/{{_id}}" class="btn grey">Read More</a>
+                    <a href="/comments/{{_id}}" class="btn grey">Read More</a>
                 </div>
             </div>
         </div>
